--- a/tokenization.ipynb
+++ b/tokenization.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "4bc42f87",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "97b6be35",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "e3420c4a",
    "metadata": {},
    "outputs": [
@@ -67,26 +67,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0;31mSignature:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmaxsplit\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mDocstring:\u001b[0m\n",
+      "\u001b[31mSignature:\u001b[39m str.split(self, /, sep=\u001b[38;5;28;01mNone\u001b[39;00m, maxsplit=-\u001b[32m1\u001b[39m)\n",
+      "\u001b[31mDocstring:\u001b[39m\n",
       "Return a list of the substrings in the string, using sep as the separator string.\n",
       "\n",
       "  sep\n",
       "    The separator used to split the string.\n",
       "\n",
       "    When set to None (the default value), will split on any whitespace\n",
-      "    character (including \\n \\r \\t \\f and spaces) and will discard\n",
+      "    character (including \\\\n \\\\r \\\\t \\\\f and spaces) and will discard\n",
       "    empty strings from the result.\n",
       "  maxsplit\n",
-      "    Maximum number of splits.\n",
+      "    Maximum number of splits (starting from the left).\n",
       "    -1 (the default value) means no limit.\n",
-      "\n",
-      "Splitting starts at the front of the string and works to the end.\n",
       "\n",
       "Note, str.split() is mainly useful for data that has been intentionally\n",
       "delimited.  With natural text that includes punctuation, consider using\n",
       "the regular expression module.\n",
-      "\u001b[0;31mType:\u001b[0m      method_descriptor"
+      "\u001b[31mType:\u001b[39m      method_descriptor"
      ]
     }
    ],
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "8c0ba08b",
    "metadata": {},
    "outputs": [],
@@ -114,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "492c767f",
    "metadata": {},
    "outputs": [
@@ -137,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "b56ae35c",
    "metadata": {},
    "outputs": [
@@ -157,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "b9c3edff",
    "metadata": {},
    "outputs": [
@@ -167,7 +165,7 @@
        "8"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,15 +176,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9b99049a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A PLUME of smoke drifted under the great glass dome of Slagborough Station as the Northern Express c\n"
+     ]
+    }
+   ],
    "source": [
-    "with open(\"story.txt\", \"r\") as f:\n",
+    "with open(\"one-foggy-night.txt\", \"r\") as f:\n",
     "    raw_text = f.read()\n",
     "print(raw_text[:100])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6d22a75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -205,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
