--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -233,7 +233,7 @@
    ],
    "source": [
     "dataloader = create_dataloader_v1(\n",
-    "    raw_text, batch_size=1, max_length=4, stride=1, shuffle=False\n",
+    "    raw_text, batch_size=1, max_length=4, stride=4, shuffle=False\n",
     ")\n",
     "\n",
     "data_iter = iter(dataloader)\n",
@@ -251,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[tensor([[ 9297, 38340,   286,  7523]]), tensor([[38340,   286,  7523, 38648]])]\n"
+      "[tensor([[ 7523, 38648,   739,   262]]), tensor([[38648,   739,   262,  1049]])]\n"
      ]
     }
    ],
@@ -303,7 +303,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "c1556232",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'torch.Tensor'>\n",
+      "torch.Size([8, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#get the dimensions and type of the input\n",
+    "print(type(inputs))\n",
+    "print(inputs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
+   "id": "81957646",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([   32,  9297, 38340,   286])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# look at the first row\n",
+    "inputs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b77fd65c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([  32, 7523, 1049, 3454,  355, 1625, 1302,  373])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# look at the first column, or the first element of each row\n",
+    "inputs[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6c8509bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A PLUME of\n",
+      " smoke drifted under the\n",
+      " great glass dome of\n",
+      " Slagborough Station\n",
+      " as the Northern Express\n",
+      " came slowly to a\n",
+      " standstill. It\n",
+      " was getting late now\n"
+     ]
+    }
+   ],
+   "source": [
+    "# iterating through the tensors, looking at the words rather than the tokens \n",
+    "for row in inputs:\n",
+    "    print(tokenizer.decode ( row.tolist()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "85b556ff",
    "metadata": {},
    "outputs": [
@@ -331,8 +423,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "01a8d386",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab_size = 6\n",
+    "output_dim = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "89c6f7fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embedding = torch.nn.Embedding( vocab_size, output_dim )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3e90bda0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter containing:\n",
+      "tensor([[-0.6581, -0.5634, -0.2210],\n",
+      "        [ 0.1127, -0.8773, -0.7109],\n",
+      "        [-0.2395,  0.0193,  1.8225],\n",
+      "        [-0.6451,  0.4337,  2.5604],\n",
+      "        [ 0.0647,  0.9500,  0.5294],\n",
+      "        [-1.2725, -0.1775,  1.0687]], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(embedding.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "838f75b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.6581, -0.5634, -0.2210],\n",
+       "        [ 0.1127, -0.8773, -0.7109],\n",
+       "        [-0.2395,  0.0193,  1.8225],\n",
+       "        [-0.6451,  0.4337,  2.5604],\n",
+       "        [ 0.0647,  0.9500,  0.5294],\n",
+       "        [-1.2725, -0.1775,  1.0687]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get rid of the requires_grad bit value\n",
+    "embedding.weight.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e81f54cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.6581, -0.5634, -0.2210],\n",
+      "        [ 0.1127, -0.8773, -0.7109],\n",
+      "        [-0.2395,  0.0193,  1.8225],\n",
+      "        [-0.6451,  0.4337,  2.5604],\n",
+      "        [ 0.0647,  0.9500,  0.5294],\n",
+      "        [-1.2725, -0.1775,  1.0687]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# or get rid of the ..\n",
+    "print(embedding.weight.detach())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ca53ae9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddingb = torch.nn.Embedding( tokenizer.n_vocab, 256)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "39113072",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Parameter containing:\n",
+       "tensor([[ 1.0801,  0.9704, -1.4465,  ..., -1.0361,  1.5483, -0.8087],\n",
+       "        [ 0.6358,  0.8066, -0.3688,  ..., -2.4138,  2.2698, -0.8626],\n",
+       "        [ 0.3924, -0.1876,  0.6837,  ...,  1.7041, -0.7503, -0.9759],\n",
+       "        ...,\n",
+       "        [-0.8264,  0.9193,  1.8463,  ...,  0.1582, -0.4945, -0.9616],\n",
+       "        [-1.0001,  0.0571, -0.1649,  ...,  0.6863,  0.3031,  0.9207],\n",
+       "        [ 0.1611,  0.8415, -0.4835,  ..., -1.9034,  1.1451,  0.7738]],\n",
+       "       requires_grad=True)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddingb.weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cc6e728d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([2.2000, 1.5000]) tensor([1.4000, 2.3000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make a tensor from scratch from scratch\n",
+    "x = torch.tensor([2.2,1.5])\n",
+    "y = torch.tensor([1.4,2.3])\n",
+    "print(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9b089a43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(6.5300)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.dot(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e48472eb",
    "metadata": {},
    "outputs": [],
    "source": []
