--- a/trainable_attention.ipynb
+++ b/trainable_attention.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 1,
       "id": "c78b079a",
       "metadata": {
         "id": "c78b079a"
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 2,
       "id": "d1c0c81b",
       "metadata": {
         "id": "d1c0c81b"
@@ -42,26 +42,26 @@
       ],
       "metadata": {
         "id": "EGWp0DcrxAYS",
-        "outputId": "ac659294-3210-4cc7-beb7-cf0215dab6b4",
+        "outputId": "be8987d3-3285-42f6-bd33-184a79a84f3c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "EGWp0DcrxAYS",
-      "execution_count": 37,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[-1.0549, -1.2410, -1.2727, -0.9202,  0.5775,  0.7022,  0.8694, -0.0043],\n",
-              "        [-0.3531, -0.6784,  1.2160, -0.6186, -0.6871, -0.4007,  0.3720, -0.2599],\n",
-              "        [-0.7226, -0.1292, -0.7689, -0.9081, -0.7946, -1.1334,  1.0931,  0.2480],\n",
-              "        [-1.0707, -0.0070,  1.8550,  1.9543, -1.6581, -0.5846,  0.4483,  0.0652]])"
+              "tensor([[-1.1409,  1.9904, -1.5029, -0.3719, -0.0094,  1.0202, -1.4527, -0.1686],\n",
+              "        [ 0.3157,  0.1487, -0.5505, -0.8596,  0.7156,  0.9594, -0.3960, -0.5231],\n",
+              "        [ 0.5807,  2.9491, -0.3287,  0.3263, -0.4029,  0.9054, -0.0462,  0.0200],\n",
+              "        [ 0.2366, -0.6871, -1.3611,  0.1971,  0.0978,  1.2356, -1.6434,  2.7711]])"
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 3
         }
       ]
     },
@@ -81,7 +81,7 @@
         "id": "BV1AyTvYxCt8"
       },
       "id": "BV1AyTvYxCt8",
-      "execution_count": 38,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -93,23 +93,23 @@
       ],
       "metadata": {
         "id": "giMsI6IoyWTl",
-        "outputId": "41008b7c-368c-4ac5-eaf3-a97d51e8c315",
+        "outputId": "2a707ccf-fd63-4e2a-da1e-9e1712febfb3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "giMsI6IoyWTl",
-      "execution_count": 39,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([ 1.4573, -2.1323, -2.3605, -2.6233,  2.6573,  0.4844])"
+              "tensor([-3.3555,  0.5383,  6.5373,  3.3256, -4.0626, -3.2256])"
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 5
         }
       ]
     },
@@ -123,26 +123,26 @@
       ],
       "metadata": {
         "id": "6C8AR2qzy3MI",
-        "outputId": "0b0cde1d-2059-4d1f-8874-11d0a005e604",
+        "outputId": "e6a2c977-b106-4254-cac1-d98f3468b51a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "6C8AR2qzy3MI",
-      "execution_count": 40,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Values:  tensor([[-0.8270, -0.3307,  0.2861,  1.5011, -0.8435,  3.2534],\n",
-            "        [-4.1158, -5.7532,  1.7549,  0.0750, -1.8873, -0.0725],\n",
-            "        [-2.6695, -5.6879,  0.3235, -2.8856, -4.8177,  0.2529],\n",
-            "        [-1.7539, -3.7876,  1.6834,  2.1608,  0.4728, -7.1969]]) \n",
-            "Keys:  tensor([[ 0.1711, -3.8989, -1.2842, -1.2390,  4.1545, -3.1930],\n",
-            "        [-2.5356, -1.7860, -1.4798,  0.7440,  2.1231,  1.0812],\n",
-            "        [-2.3679, -2.3318, -2.0670, -0.8711,  0.9281,  1.1790],\n",
-            "        [-5.7742, -1.8014, -1.3338,  1.0721, -0.3762,  0.9523]])\n"
+            "Values:  tensor([[ 4.3321,  1.0042,  0.9976, -1.1313, -1.1402, -6.5772],\n",
+            "        [-0.5589, -1.1667, -2.6606,  0.4368, -0.1820, -0.7293],\n",
+            "        [ 5.1428,  3.3527,  4.1686, -3.2166, -4.1008, -8.9574],\n",
+            "        [-4.3656, -2.6636, -5.4837,  0.0429, -2.9598, -2.6025]]) \n",
+            "Keys:  tensor([[-1.6257, -3.9317,  0.7758,  0.7769,  1.5306,  3.7090],\n",
+            "        [-3.3261, -0.4287,  1.5865, -1.3945,  0.7230,  0.8282],\n",
+            "        [-2.8306, -1.7201, -2.0632, -3.3845,  0.9093,  4.2520],\n",
+            "        [ 0.8098, -6.1397,  3.2592, -4.1501,  5.3712, -0.7537]])\n"
           ]
         }
       ]
@@ -155,23 +155,23 @@
       ],
       "metadata": {
         "id": "dbIXaFAuzI8-",
-        "outputId": "1d310008-cbd9-454b-b90a-0070eceb82dc",
+        "outputId": "be8b9e28-a6b3-4c5a-f5d9-3fa4b1edb4e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "dbIXaFAuzI8-",
-      "execution_count": 52,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([24.3375,  7.8197, 11.7230, -4.7759])"
+              "tensor([ -7.1880,  11.0549, -33.5805, -17.9073])"
             ]
           },
           "metadata": {},
-          "execution_count": 52
+          "execution_count": 7
         }
       ]
     },
@@ -180,28 +180,28 @@
       "source": [
         "# attention_weights = attention_scores.softmax(dim = -1)\n",
         "\n",
-        "attention_weights = torch.softmax(attention_scores, dim=-1 )\n",
+        "attention_weights = torch.softmax(attention_scores / keys.shape[-1]**0.5, dim=-1 )\n",
         "attention_weights"
       ],
       "metadata": {
         "id": "ZojH88rW0FUZ",
-        "outputId": "8e19f58b-7bcf-4491-c6be-00f5858a2a9b",
+        "outputId": "7c8e2318-7411-4f11-88f8-51ba8a65fd90",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "ZojH88rW0FUZ",
-      "execution_count": 53,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([1.0000e+00, 6.7056e-08, 3.3236e-06, 2.2709e-13])"
+              "tensor([5.8249e-04, 9.9941e-01, 1.2187e-08, 7.3239e-06])"
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 8
         }
       ]
     },
@@ -212,13 +212,13 @@
       ],
       "metadata": {
         "id": "K7y_eHzk0hrh",
-        "outputId": "16e3ab54-407f-4595-9c0f-cd2208725ee5",
+        "outputId": "142696cc-1be3-4ef2-d22e-f42f6f64a273",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "K7y_eHzk0hrh",
-      "execution_count": 54,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,7 +228,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 9
         }
       ]
     },
@@ -240,23 +240,247 @@
       ],
       "metadata": {
         "id": "QcX7_Lr407D2",
-        "outputId": "c4a935cc-ce1b-429f-9ccc-dbda35f44c53",
+        "outputId": "e4802234-239d-4350-9333-1be03fa10a6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "QcX7_Lr407D2",
-      "execution_count": 55,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([-0.8270, -0.3307,  0.2861,  1.5011, -0.8435,  3.2534])"
+              "tensor([-0.5561, -1.1655, -2.6585,  0.4359, -0.1826, -0.7327])"
             ]
           },
           "metadata": {},
-          "execution_count": 55
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.nn as nn"
+      ],
+      "metadata": {
+        "id": "9CJK6c8p090W"
+      },
+      "id": "9CJK6c8p090W",
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class SimpleAttention( nn.Module ):\n",
+        "  def __init__( self, d_in, d_out ):\n",
+        "    super().__init__()\n",
+        "    # create weight matrices\n",
+        "    self.W_query = torch.nn.Parameter( torch.rand( d_in, d_out ), requires_grad=False )\n",
+        "    self.W_key = torch.nn.Parameter( torch.rand( d_in, d_out ), requires_grad=False )\n",
+        "    self.W_value = torch.nn.Parameter( torch.rand( d_in, d_out ), requires_grad=False )\n",
+        "\n",
+        "  # x = embedding vectors (inputs)\n",
+        "  def forward(self, x):\n",
+        "    query = x @ self.W_query\n",
+        "    keys = x @ self.W_key\n",
+        "    values = x @ self.W_value\n",
+        "    attention_scores = query @ keys.T\n",
+        "    weights = torch.softmax(attention_scores / keys.shape[-1]**0.5, dim=-1 )\n",
+        "    context_vector = weights @ values\n",
+        "    return context_vector\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "rmqohDO9EwKF"
+      },
+      "id": "rmqohDO9EwKF",
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# how to use, instantiate an instance of it\n",
+        "simple = SimpleAttention( d_in=8, d_out=6 )"
+      ],
+      "metadata": {
+        "id": "8dPmmHSkGedw"
+      },
+      "id": "8dPmmHSkGedw",
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "simple.W_value"
+      ],
+      "metadata": {
+        "id": "sLWq9QVCGjbt",
+        "outputId": "70ead547-8052-4940-a2ab-285be64dfe1c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "sLWq9QVCGjbt",
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Parameter containing:\n",
+              "tensor([[0.5402, 0.2507, 0.2656, 0.3683, 0.5517, 0.7879],\n",
+              "        [0.1108, 0.5651, 0.4232, 0.5728, 0.5119, 0.9222],\n",
+              "        [0.4943, 0.6898, 0.2489, 0.6047, 0.7045, 0.3921],\n",
+              "        [0.3669, 0.6006, 0.3672, 0.3818, 0.1152, 0.5886],\n",
+              "        [0.5593, 0.9466, 0.1252, 0.1099, 0.1236, 0.2779],\n",
+              "        [0.1003, 0.2716, 0.3923, 0.8284, 0.3606, 0.8240],\n",
+              "        [0.1995, 0.4309, 0.6025, 0.8863, 0.3609, 0.4383],\n",
+              "        [0.0184, 0.0788, 0.0637, 0.3206, 0.3667, 0.6317]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "context_vectors = simple(inputs)\n",
+        "context_vectors"
+      ],
+      "metadata": {
+        "id": "5fo3YvoTGmDf",
+        "outputId": "19e56086-b62f-461f-924b-e69af5301b01",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "5fo3YvoTGmDf",
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-1.3229, -0.7206, -0.4259, -0.7522, -0.8451,  0.2374],\n",
+              "        [-1.1290, -0.6293, -0.3639, -0.5985, -0.6762,  0.3977],\n",
+              "        [ 0.4543,  1.6270,  1.7179,  2.4994,  1.9029,  3.8663],\n",
+              "        [ 0.4268,  1.5556,  1.6526,  2.4177,  1.8440,  3.7889]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class SimpleAttention2( nn.Module ):\n",
+        "  def __init__( self, d_in, d_out ):\n",
+        "    super().__init__()\n",
+        "    # create weight matrices\n",
+        "    self.W_query = nn.Linear( d_in, d_out, bias=False )\n",
+        "    self.W_key = nn.Linear( d_in, d_out, bias=False )\n",
+        "    self.W_value = nn.Linear( d_in, d_out, bias=False )\n",
+        "\n",
+        "  # x = embedding vectors (inputs)\n",
+        "  def forward(self, x):\n",
+        "    query = self.W_query( x )\n",
+        "    keys = self.W_key( x )\n",
+        "    values = self.W_value( x )\n",
+        "    attention_scores = query @ keys.T\n",
+        "    weights = torch.softmax(attention_scores / keys.shape[-1]**0.5, dim=-1 )\n",
+        "    context_vector = weights @ values\n",
+        "    return context_vector"
+      ],
+      "metadata": {
+        "id": "jkfLRAbqGyZ9"
+      },
+      "id": "jkfLRAbqGyZ9",
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# how to use, instantiate an instance of it\n",
+        "simple = SimpleAttention2( d_in=8, d_out=6 )\n"
+      ],
+      "metadata": {
+        "id": "f7MsCXlAIsAO"
+      },
+      "id": "f7MsCXlAIsAO",
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "simple.W_value"
+      ],
+      "metadata": {
+        "id": "sChX5MKRIvD-",
+        "outputId": "9431715a-a8d8-4035-be3e-e0e620e6bc95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "sChX5MKRIvD-",
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Linear(in_features=8, out_features=6, bias=False)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "context_vectors = simple(inputs)\n",
+        "context_vectors"
+      ],
+      "metadata": {
+        "id": "_ETDYdLZI2QN",
+        "outputId": "ac473f87-0a66-43aa-f54e-7522e49dfae4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "_ETDYdLZI2QN",
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[-4.0908e-02,  6.2397e-01,  6.9920e-02,  1.1415e-01,  4.8267e-01,\n",
+              "          3.2548e-01],\n",
+              "        [-5.7384e-04,  7.1514e-01,  1.0783e-01,  1.4399e-01,  4.8921e-01,\n",
+              "          2.5816e-01],\n",
+              "        [-3.9691e-02,  6.3777e-01,  7.5006e-02,  1.2596e-01,  4.7954e-01,\n",
+              "          3.0081e-01],\n",
+              "        [-2.6508e-02,  6.4697e-01,  8.1854e-02,  1.0655e-01,  4.9552e-01,\n",
+              "          3.1444e-01]], grad_fn=<MmBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
         }
       ]
     },
@@ -264,9 +488,9 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "9CJK6c8p090W"
+        "id": "HYxGgL0dI3sP"
       },
-      "id": "9CJK6c8p090W",
+      "id": "HYxGgL0dI3sP",
       "execution_count": null,
       "outputs": []
     }
