--- a/gpt_model.ipynb
+++ b/gpt_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcS7kHfHX6okspVXW2wqPD",
+      "authorship_tag": "ABX9TyMUy8ZfM+UnaA1Bcltwdf3A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "wmhKl5UoH7vB"
       },
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "mUUUUU6UIWZl"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -128,7 +128,7 @@
       "metadata": {
         "id": "Xzt4ebSaE8Vv"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "mD3fjIEZES3G"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -169,7 +169,7 @@
       "metadata": {
         "id": "tOYJs5kGEWhs"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -191,7 +191,7 @@
       "metadata": {
         "id": "TRinns9PEZeh"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "XbitJPCfEcCJ"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -276,7 +276,7 @@
       "metadata": {
         "id": "URQkZAli5ByZ"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -299,9 +299,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kuxWQgUM8BMl",
-        "outputId": "1a2e6bd0-1cf5-414d-c6aa-a65786b5578a"
+        "outputId": "e4483309-134d-453f-c8c8-417227cad6f3"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,9 +329,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pSt9Ec_n8F17",
-        "outputId": "8a5e4af9-0cb4-475f-e2ad-4e51ea1c0880"
+        "outputId": "4d84aae9-8529-4abd-ce72-7c1a62e637d6"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +386,25 @@
       "metadata": {
         "id": "LEMp1JRW8Slb"
       },
-      "execution_count": 11,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def text_to_token_ids(text, tokenizer):\n",
+        "    encoded = tokenizer.encode(text, allowed_special={'<|endoftext|>'})\n",
+        "    encoded_tensor = torch.tensor(encoded).unsqueeze(0) # add batch dimension\n",
+        "    return encoded_tensor\n",
+        "\n",
+        "def token_ids_to_text(token_ids, tokenizer):\n",
+        "    flat = token_ids.squeeze(0) # remove batch dimension\n",
+        "    return tokenizer.decode(flat.tolist())"
+      ],
+      "metadata": {
+        "id": "DJrMio07TDSw"
+      },
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -405,9 +423,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "00a5adfa-4a57-48b6-8b8f-cb71fa123f7b"
+        "outputId": "a30ccf71-a360-4ab0-abe7-a9ae6c454388"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -439,9 +457,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ksCJKyx5P9hP",
-        "outputId": "62b0f5cc-6c09-4f26-f2d8-576e0838ce4e"
+        "outputId": "5411f4ed-1edc-4534-b181-16174d89eac1"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,9 +482,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iRSXivi2P_d5",
-        "outputId": "fd0f12db-8c1e-498a-a34f-88c0f59bea6d"
+        "outputId": "26d6cd6f-05cc-4e1f-9e17-7288610f72e1"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +501,7 @@
       "metadata": {
         "id": "QckO45J7RQ28"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": []
     }
   ]
