--- a/gpt_model.ipynb
+++ b/gpt_model.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMUy8ZfM+UnaA1Bcltwdf3A",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Valentino-Cheek/CS-290-LLMs/blob/main/gpt_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -41,6 +25,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "mUUUUU6UIWZl"
+      },
+      "outputs": [],
       "source": [
         "GPT_CONFIG_124M = {\n",
         "    \"vocab_size\": 50257,    # Vocabulary size\n",
@@ -51,15 +40,15 @@
         "    \"drop_rate\": 0.1,       # Dropout rate\n",
         "    \"qkv_bias\": False       # Query-Key-Value bias\n",
         "}"
-      ],
-      "metadata": {
-        "id": "mUUUUU6UIWZl"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "id": "Xzt4ebSaE8Vv"
+      },
+      "outputs": [],
       "source": [
         "class MultiHeadAttention(nn.Module):\n",
         "    def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
@@ -124,15 +113,15 @@
         "        context_vec = self.out_proj(context_vec) # optional projection\n",
         "\n",
         "        return context_vec"
-      ],
-      "metadata": {
-        "id": "Xzt4ebSaE8Vv"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "mD3fjIEZES3G"
+      },
+      "outputs": [],
       "source": [
         "class LayerNorm(nn.Module):\n",
         "    def __init__(self, emb_dim):\n",
@@ -146,15 +135,15 @@
         "        var = x.var(dim=-1, keepdim=True, unbiased=False)\n",
         "        norm_x = (x - mean) / torch.sqrt(var + self.eps)\n",
         "        return self.scale * norm_x + self.shift"
-      ],
-      "metadata": {
-        "id": "mD3fjIEZES3G"
-      },
-      "execution_count": 5,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "tOYJs5kGEWhs"
+      },
+      "outputs": [],
       "source": [
         "class GELU(nn.Module):\n",
         "    def __init__(self):\n",
@@ -165,15 +154,15 @@
         "            torch.sqrt(torch.tensor(2.0 / torch.pi)) *\n",
         "            (x + 0.044715 * torch.pow(x, 3))\n",
         "        ))"
-      ],
-      "metadata": {
-        "id": "tOYJs5kGEWhs"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {
+        "id": "TRinns9PEZeh"
+      },
+      "outputs": [],
       "source": [
         "class FeedForward(nn.Module):\n",
         "    def __init__(self, cfg):\n",
@@ -187,15 +176,15 @@
         "    def forward(self, x):\n",
         "        return self.layers(x)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "TRinns9PEZeh"
-      },
-      "execution_count": 7,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "XbitJPCfEcCJ"
+      },
+      "outputs": [],
       "source": [
         "class TransformerBlock( nn.Module ):\n",
         "    def __init__(self, cfg):\n",
@@ -232,15 +221,15 @@
         "        x = x + shortcut  # Add the original input back\n",
         "\n",
         "        return x\n"
-      ],
-      "metadata": {
-        "id": "XbitJPCfEcCJ"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {
+        "id": "URQkZAli5ByZ"
+      },
+      "outputs": [],
       "source": [
         "class GPTModel(nn.Module):\n",
         "    def __init__(self, cfg):\n",
@@ -272,15 +261,28 @@
         "        return logits\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "URQkZAli5ByZ"
-      },
-      "execution_count": 9,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kuxWQgUM8BMl",
+        "outputId": "e4483309-134d-453f-c8c8-417227cad6f3"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor([[6109, 3626, 6100,  345],\n",
+            "        [6109, 1110, 6622,  257]])\n"
+          ]
+        }
+      ],
       "source": [
         "tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
         "\n",
@@ -293,37 +295,11 @@
         "batch.append(torch.tensor(tokenizer.encode(txt2)))\n",
         "batch = torch.stack(batch, dim=0)\n",
         "print(batch)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kuxWQgUM8BMl",
-        "outputId": "e4483309-134d-453f-c8c8-417227cad6f3"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "tensor([[6109, 3626, 6100,  345],\n",
-            "        [6109, 1110, 6622,  257]])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "torch.manual_seed(123)\n",
-        "model = GPTModel(GPT_CONFIG_124M)\n",
-        "\n",
-        "logits = model(batch)\n",
-        "print(\"Output shape:\", logits.shape)\n",
-        "print(logits)\n",
-        "# initial output is just random numbers / untrained"
-      ],
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -331,11 +307,10 @@
         "id": "pSt9Ec_n8F17",
         "outputId": "4d84aae9-8529-4abd-ce72-7c1a62e637d6"
       },
-      "execution_count": 11,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Output shape: torch.Size([2, 4, 50257])\n",
             "tensor([[[ 0.3613,  0.4222, -0.0711,  ...,  0.3483,  0.4661, -0.2838],\n",
@@ -350,10 +325,24 @@
             "       grad_fn=<UnsafeViewBackward0>)\n"
           ]
         }
+      ],
+      "source": [
+        "torch.manual_seed(123)\n",
+        "model = GPTModel(GPT_CONFIG_124M)\n",
+        "\n",
+        "logits = model(batch)\n",
+        "print(\"Output shape:\", logits.shape)\n",
+        "print(logits)\n",
+        "# initial output is just random numbers / untrained"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "LEMp1JRW8Slb"
+      },
+      "outputs": [],
       "source": [
         "def generate_text_simple(model, idx, max_new_tokens, context_size):\n",
         "    # idx is (batch, n_tokens) array of indices in the current context\n",
@@ -382,15 +371,15 @@
         "        idx = torch.cat((idx, idx_next), dim=1)  # (batch, n_tokens+1)\n",
         "\n",
         "    return idx"
-      ],
-      "metadata": {
-        "id": "LEMp1JRW8Slb"
-      },
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "DJrMio07TDSw"
+      },
+      "outputs": [],
       "source": [
         "def text_to_token_ids(text, tokenizer):\n",
         "    encoded = tokenizer.encode(text, allowed_special={'<|endoftext|>'})\n",
@@ -400,15 +389,28 @@
         "def token_ids_to_text(token_ids, tokenizer):\n",
         "    flat = token_ids.squeeze(0) # remove batch dimension\n",
         "    return tokenizer.decode(flat.tolist())"
-      ],
-      "metadata": {
-        "id": "DJrMio07TDSw"
-      },
-      "execution_count": 12,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SD_LqcJWGDbP",
+        "outputId": "a30ccf71-a360-4ab0-abe7-a9ae6c454388"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "encoded: [15496, 11, 314, 716]\n",
+            "encoded_tensor.shape: torch.Size([1, 4])\n"
+          ]
+        }
+      ],
       "source": [
         "start_context = \"Hello, I am\"\n",
         "\n",
@@ -417,28 +419,28 @@
         "\n",
         "encoded_tensor = torch.tensor(encoded).unsqueeze(0)\n",
         "print(\"encoded_tensor.shape:\", encoded_tensor.shape)"
-      ],
-      "metadata": {
-        "id": "SD_LqcJWGDbP",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a30ccf71-a360-4ab0-abe7-a9ae6c454388"
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "encoded: [15496, 11, 314, 716]\n",
-            "encoded_tensor.shape: torch.Size([1, 4])\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ksCJKyx5P9hP",
+        "outputId": "5411f4ed-1edc-4534-b181-16174d89eac1"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Output: tensor([[15496,    11,   314,   716, 27018, 24086, 47843, 30961, 42348,  7267]])\n",
+            "Output length: 10\n"
+          ]
+        }
+      ],
       "source": [
         "model.eval() # disable dropout\n",
         "\n",
@@ -451,32 +453,11 @@
         "\n",
         "print(\"Output:\", out)\n",
         "print(\"Output length:\", len(out[0]))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ksCJKyx5P9hP",
-        "outputId": "5411f4ed-1edc-4534-b181-16174d89eac1"
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Output: tensor([[15496,    11,   314,   716, 27018, 24086, 47843, 30961, 42348,  7267]])\n",
-            "Output length: 10\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "decoded_text = tokenizer.decode(out.squeeze(0).tolist())\n",
-        "print(decoded_text)"
-      ],
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -484,25 +465,46 @@
         "id": "iRSXivi2P_d5",
         "outputId": "26d6cd6f-05cc-4e1f-9e17-7288610f72e1"
       },
-      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Hello, I am Featureiman Byeswickattribute argue\n"
           ]
         }
+      ],
+      "source": [
+        "decoded_text = tokenizer.decode(out.squeeze(0).tolist())\n",
+        "print(decoded_text)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 15,
       "metadata": {
         "id": "QckO45J7RQ28"
       },
-      "execution_count": 15,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMUy8ZfM+UnaA1Bcltwdf3A",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.12.12"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
