--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "5a7553b7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tinocheek/projects/cs290/venv/lib/python3.12/site-packages/torch/_subclasses/functional_tensor.py:279: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:84.)\n",
-      "  cpu = _conversion_method_template(device=torch.device(\"cpu\"))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -23,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "065a25f7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "3b00c675",
    "metadata": {},
    "outputs": [
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "id": "7d24e61a",
    "metadata": {},
    "outputs": [],
@@ -81,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "id": "b87db934",
    "metadata": {},
    "outputs": [],
@@ -94,18 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "id": "78690c5c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloaded to gpt2-small-124M.pth\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import requests\n",
@@ -122,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "90372bc1",
    "metadata": {},
    "outputs": [],
@@ -131,35 +114,30 @@
     "# For llms_from_scratch installation instructions, see:\n",
     "# https://github.com/rasbt/LLMs-from-scratch/tree/main/pkg\n",
     "\n",
-    "gpt = GPTModel(BASE_CONFIG)\n",
-    "gpt.load_state_dict(torch.load(file_name, weights_only=True))\n",
-    "gpt.eval()\n",
+    "model = GPTModel(BASE_CONFIG)\n",
+    "model.load_state_dict(torch.load(file_name, weights_only=True))\n",
+    "model.eval()\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "gpt.to(device);"
+    "model.to(device);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "id": "8cbfa6e3",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Output text:\n",
-      " Every effort moves forward, but it's not enough.\n",
+      " Every effort moves you toward the right direction.\n",
       "\n",
-      "\"I'm not going to sit here and say, 'I'm not going to do this,'\n"
+      "\"You have to be careful not to make the wrong choices,\" he said.\n",
+      "\n",
+      "The first thing that comes\n"
      ]
     }
    ],
@@ -172,12 +150,12 @@
     "tokenizer = tiktoken.get_encoding(\"gpt2\")\n",
     "\n",
     "token_ids = generate(\n",
-    "    model=gpt.to(device),\n",
-    "    idx=text_to_token_ids(\"Every effort moves\", tokenizer).to(device),\n",
+    "    model=model.to(device),\n",
+    "    idx=text_to_token_ids(\"Every effort moves you\", tokenizer).to(device),\n",
     "    max_new_tokens=30,\n",
     "    context_size=BASE_CONFIG[\"context_length\"],\n",
-    "    top_k=1,\n",
-    "    temperature=1.0\n",
+    "    top_k=10,\n",
+    "    temperature=0.8\n",
     ")\n",
     "\n",
     "print(\"Output text:\\n\", token_ids_to_text(token_ids, tokenizer))"
