--- a/entropy-shortstorytraining.ipynb
+++ b/entropy-shortstorytraining.ipynb
@@ -16,16 +16,7 @@
       "metadata": {
         "id": "wmhKl5UoH7vB"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/tinocheek/projects/cs290/venv/lib/python3.12/site-packages/torch/_subclasses/functional_tensor.py:279: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:84.)\n",
-            "  cpu = _conversion_method_template(device=torch.device(\"cpu\"))\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
@@ -43,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "mUUUUU6UIWZl"
       },
@@ -62,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -93,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 6,
       "metadata": {
         "id": "LEMp1JRW8Slb"
       },
@@ -103,7 +94,7 @@
           "output_type": "stream",
           "text": [
             "Output text:\n",
-            " Every effort moves you Reaper missions sub pond cluster LETresource ---------------------------------------------------------------- Lovelyarf\n"
+            " Every effort moves you 347zymeImagine Fight Vir CRA MansEnt thinking Ur\n"
           ]
         }
       ],
@@ -120,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -133,7 +124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -154,28 +145,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "tensor([[[1.4740e-05, 1.0509e-05, 2.7732e-05,  ..., 2.6992e-05,\n",
-              "          2.3762e-05, 6.4455e-06],\n",
-              "         [2.2708e-05, 8.2025e-06, 8.9816e-06,  ..., 9.0486e-06,\n",
-              "          3.8138e-05, 1.0438e-05],\n",
-              "         [3.2712e-05, 1.1963e-05, 1.1741e-05,  ..., 2.5693e-05,\n",
-              "          1.0983e-05, 1.4563e-05]],\n",
+              "tensor([[[9.1322e-06, 1.9040e-05, 3.1820e-05,  ..., 2.2760e-05,\n",
+              "          2.0869e-05, 1.8695e-05],\n",
+              "         [7.5804e-06, 9.3416e-06, 1.0091e-05,  ..., 1.1514e-05,\n",
+              "          9.4199e-06, 7.9960e-06],\n",
+              "         [2.2600e-05, 1.7959e-05, 1.5760e-05,  ..., 1.5198e-05,\n",
+              "          2.3500e-05, 8.7232e-06]],\n",
               "\n",
-              "        [[2.6887e-05, 1.3551e-05, 3.8581e-05,  ..., 1.0603e-05,\n",
-              "          3.9664e-05, 9.1785e-06],\n",
-              "         [2.0010e-05, 3.3824e-05, 1.3599e-05,  ..., 7.7571e-06,\n",
-              "          3.6566e-05, 1.7339e-05],\n",
-              "         [2.9433e-05, 2.5328e-05, 2.7936e-05,  ..., 1.0719e-05,\n",
-              "          1.4151e-05, 2.4066e-05]]])"
+              "        [[2.2038e-05, 5.1091e-05, 2.9083e-05,  ..., 1.6350e-05,\n",
+              "          6.3813e-06, 1.9083e-05],\n",
+              "         [1.5386e-05, 6.9856e-06, 9.6012e-06,  ..., 1.4154e-05,\n",
+              "          1.8527e-05, 1.2891e-05],\n",
+              "         [1.0663e-04, 1.4019e-05, 3.3675e-05,  ..., 1.3199e-05,\n",
+              "          2.0621e-05, 1.1523e-05]]])"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -186,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -194,13 +185,13 @@
           "output_type": "stream",
           "text": [
             "Token IDs:\n",
-            " tensor([[[31242],\n",
-            "         [15489],\n",
-            "         [ 1036]],\n",
+            " tensor([[[12399],\n",
+            "         [ 6778],\n",
+            "         [15546]],\n",
             "\n",
-            "        [[23598],\n",
-            "         [49289],\n",
-            "         [29813]]])\n"
+            "        [[21760],\n",
+            "         [40433],\n",
+            "         [23132]]])\n"
           ]
         }
       ],
@@ -212,7 +203,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -220,7 +211,7 @@
           "output_type": "stream",
           "text": [
             "Targets batch 1:  effort moves you\n",
-            "Outputs batch 1:  aroma bay gr\n"
+            "Outputs batch 1:  brutal intentionRad\n"
           ]
         }
       ],
@@ -231,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -241,7 +232,7 @@
               "        [ 1107,   588, 11311]])"
             ]
           },
-          "execution_count": 15,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -252,15 +243,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Text 1: tensor([2.0880e-05, 2.8044e-05, 1.2306e-05])\n",
-            "Text 2: tensor([6.5643e-05, 1.7534e-05, 1.2916e-05])\n"
+            "Text 1: tensor([4.0453e-05, 1.5437e-05, 2.1449e-05])\n",
+            "Text 2: tensor([1.6584e-05, 6.7160e-06, 3.2526e-05])\n"
           ]
         }
       ],
@@ -276,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -285,14 +276,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "tensor([-10.7767, -10.4817, -11.3054,  -9.6313, -10.9514, -11.2571])\n"
+            "tensor([-10.1154, -11.0787, -10.7498, -11.0071, -11.9110, -10.3335])\n"
           ]
         }
       ],
@@ -304,15 +295,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "tensor(-10.7339)\n",
-            "tensor(10.7339)\n"
+            "tensor(-10.8659)\n",
+            "tensor(10.8659)\n"
           ]
         }
       ],
@@ -325,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -347,14 +338,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "tensor(10.7339)\n"
+            "tensor(10.8659)\n"
           ]
         }
       ],
@@ -365,14 +356,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "tensor(45886.6562)\n"
+            "tensor(52361.1445)\n"
           ]
         }
       ],
@@ -385,7 +376,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -405,7 +396,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -458,7 +449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -497,7 +488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -526,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -558,7 +549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
@@ -566,8 +557,8 @@
           "output_type": "stream",
           "text": [
             "Using mps device.\n",
-            "Training loss: 10.99099063873291\n",
-            "Validation loss: 10.983827590942383\n"
+            "Training loss: 10.99952745437622\n",
+            "Validation loss: 11.00493049621582\n"
           ]
         }
       ],
@@ -599,7 +590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -664,7 +655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [
         {
